interface base page and finished revenue controller